# textcast

./: .gitignore  .tmuxinator.yml  Makefile  README.md  config.example.yaml  flake.nix  pyproject.toml  treefmt.toml
.git-crypt/keys/default/0/: 6BD3724830BD941E9180C1A33A33FA4C82ED674F.gpg
.github/workflows/: publish.yaml  test.yaml
.secrets/: abs-api-key  abs-url  eleven-api-key  openai-api-key
articast/: article.py  cli.py  common.py  filter_urls.py  processor.py
article_to_podcast/: article_fetcher.py  cli.py  main.py
audio_reads/: cli.py
configs/: elevenlabs.yaml  example.yaml  podservice.yaml
overlays/: elevenlabs.nix
scripts/: cast.sh
tests/: conftest.py  test_article.py  test_audio.py  test_cli.py  test_filters.py  test_main.py  test_podservice.py  test_server.py  test_service_config.py  test_text.py  utils.py
textcast/: aggregator.py  audio_scrape.py  audiobookshelf.py  cli.py  common.py  condense.py  constants.py  download.py  elevenlabs.py  errors.py  filter_urls.py  models.py  openai.py  podservice.py  processor.py  server.py  service_cli.py  service_config.py  service_daemon.py  text.py
