[project]
name = "textcast"
version = "0.1.27"
description = "CLI tool for converting text to audio using TTS APIs"
readme = "README.md"
authors = [{name = "Ivan Kovnatsky"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "beautifulsoup4",
    "click",
    "elevenlabs",
    "lxml[html_clean]",
    "openai>=1.0",
    "playwright",
    "pydub",
    "readability-lxml",
    "requests",
    "simpleaudio; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/ivankovnatsky/textcast"
Changelog = "https://github.com/ivankovnatsky/textcast/releases"
Issues = "https://github.com/ivankovnatsky/textcast/issues"
CI = "https://github.com/ivankovnatsky/textcast/actions"

[project.entry-points.console_scripts]
textcast = "textcast.cli:cli"

[tool.setuptools]
packages = ["textcast"]

[project.optional-dependencies]
test = [
    "pytest",
    "cogapp",
    "requests-mock",
]

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]
