[project]
name = "textcast"
version = "0.1.27"
description = "CLI tool for converting text to audio using TTS APIs"
readme = "README.md"
authors = [{name = "Ivan Kovnatsky"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "anthropic",
    "beautifulsoup4",
    "click",
    "elevenlabs",
    "feedparser",
    "flask",
    "lxml[html_clean]",
    "openai>=1.0",
    "playwright",
    "pydub",
    "PyYAML",
    "readability-lxml",
    "requests",
    "simpleaudio; sys_platform == 'darwin'",
    "watchdog",
    "yt-dlp",
]

[project.urls]
Homepage = "https://github.com/ivankovnatsky/textcast"
Changelog = "https://github.com/ivankovnatsky/textcast/releases"
Issues = "https://github.com/ivankovnatsky/textcast/issues"
CI = "https://github.com/ivankovnatsky/textcast/actions"

[project.scripts]
textcast = "textcast.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "textcast"
version = "0.1.27"
description = "CLI tool for converting text to audio using TTS APIs"
authors = ["Ivan Kovnatsky"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ivankovnatsky/textcast"

[tool.poetry.dependencies]
python = ">=3.8"
anthropic = "*"
beautifulsoup4 = "*"
click = "*"
elevenlabs = "*"
feedparser = "*"
flask = "*"
lxml = {extras = ["html_clean"], version = "*"}
openai = ">=1.0"
playwright = "*"
pydub = "*"
PyYAML = "*"
readability-lxml = "*"
requests = "*"
simpleaudio = {version = "*", markers = "sys_platform == 'darwin'"}
watchdog = "*"
yt-dlp = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
cogapp = "*"
requests-mock = "*"
autoflake = "*"

[tool.poetry.scripts]
textcast = "textcast.cli:main"

[tool.setuptools]
packages = ["textcast"]

[project.optional-dependencies]
test = [
    "pytest",
    "cogapp",
    "requests-mock",
]

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]
